# holodeck

./: .gitignore  LICENSE  README.md  docker-compose.yml  holo  requirements.txt
curriculum/: 01_warehouse_stack.md  02_data_modeling.md  03_dataops_quality_stack.md  03_dbt_test.md  04_dataops_infra_stack.md  04_dataops_stack.md  04_devops_stack.md  05_duckdb_lab.md  06_basic_ml_stack.md  07_full_stack.md  08_datalake_stack.md
dagster/: dagster.yaml  definitions.py
dagster/.telemetry/: id.yaml
data_modeling/dbt/: dbt_project.yml  profiles.yml
devops/atlas/: atlas.hcl  schema.hcl
devops/terraform/: main.tf  outputs.tf  variables.tf
docker/atlas/: Dockerfile
docker/dagster/: Dockerfile
docker/dbt-postgres/: Dockerfile
docker/duckdb/: Dockerfile
docker/duckdb-lake/: Dockerfile
docker/ducklake/: Dockerfile
docker/holo-docs/: Dockerfile  requirements.txt
docker/holo-docs/app/: main.py  stacks.py
docker/localstack/: Dockerfile
docker/marimo/: Dockerfile
docker/mlflow/: Dockerfile
docker/soda/: Dockerfile
docker/terraform/: Dockerfile
docs/: postgres-cheatsheet.md
grafana/provisioning/datasources/: postgres.yml
init/postgres/: 01_init.sql
prometheus/: prometheus.yml
soda/: checks.yml  configuration.yml
tools/ascii/: ascii_maker.py  bluefactory.text  main_banner.txt
tools/ascii/play/: all_the_font_check.sh  ascii_banner_snip  fonts.txt  original_font_list.txt  random_ascii.py  (+2 more)
tools/bluefaker_factory/: pyproject.toml
tools/bluefaker_factory/scripts/: create_fake_fraud_data.sh
tools/image_cleaner/: read_meta.py  strip_meta.py
(+8 files in other folders)
