[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bluefaker-factory"
version = "0.1.0"
description = "Generate fake data for ML and fraud detection scenarios"
authors = [
    { name = "Michael Blue", email = "mblue8nix@gmail.com" }
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "Faker>=25.3.0",
    "fastparquet>=2024.5.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "prettytable>=3.10.0",
    "pyarrow>=16.0.0",
    "PyYAML>=6.0.1",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
analytics = [
    "duckdb",
    "matplotlib",
    "seaborn",
]
iceberg = [
    "pyiceberg>=0.7.0",
]
notebooks = [
    "notebook",
    "ipykernel",
]
dev = [
    "black",
    "flake8",
    "pytest",
    "build",
    "twine",
]

[project.scripts]
bluefaker = "bluefaker:main"

[tool.setuptools]
packages = ["logic_modules", "schema_utils", "schemas"]
py-modules = ["bluefaker"]

[tool.setuptools.package-data]
schemas = ["*.yaml", "*.yml"]

[tool.black]
line-length = 88
target-version = ["py311"]

